@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Helpers
 
 {{$NEXT}}
+          Do tilde expansion more sensibly on Windows
 
 0.012     2012-02-07 14:04:33 Europe/Amsterdam
           Added detildefy
